(lang dune 3.1)

(name RevisionOCaml)

(generate_opam_files true)

(source
 (github morelvictor/RevisionOCaml))

(authors "Victor Morel")

(maintainers "Victor Morel")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name RevisionOCaml)
 (synopsis "A project to check my skills for exams")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
